--- a/3.md
+++ b/3.md
@@ -17,13 +17,10 @@
 
 ##3.5 評価
 操作的意味論では評価関係の規則によって意味が定義される。
-評価に関するいくつかの性質を項の上での帰納法により示す。
-###定理
-####1ステップ評価の決定性
-`t→t'`かつ`t→t''`ならば`t'`=`t''`
+評価に関するいくつかの性質を定理として示す。
 
-`t→t'`の導出で最後に使った規則がE-αであるとは、`t→t'`がE-αの規則の結論の形になっているということ。
+定理の殆どの証明は項の上での帰納法によってなされる。
 
-+ E-IfTrueのとき：`t`=`if true then t2 else t3`であり、このtに適用できる規則は他にない(`true`≠`false`,`true`はこれ以上評価できないため)
-+ E-IfFalseのとき：`t`=`if false then t2 else t3`であり、同上
-+ E-Ifのとき：`t`=`if t1 then t2 else t3`であり、`t'`および`t''`はそれぞれ`t1→t1'`,`t1→t1''`として`t'`=`if t1' then t2 else t3`,`t''`=`if t1'' then t2 else t3`である。この時項の上での帰納法より`t1→t1'`,`t1→t1''`ならば`t1'`=`t1''`を用いて`t'`=`t''`を得る。
+この章で扱った形無し算術式においては、正規形であるが値でない項が存在する。
+これを行き詰まり状態と定義する。
+この様な行き詰まり状態になる項を排除するのが型システムの役目(の1つ)である。
