--- a/8.md
+++ b/8.md
@@ -4,3 +4,18 @@
 前章の体系では、項を評価すると値になるか行き詰まり状態になるかのどちらかであった。
 
 行き詰まり状態は間違ったプログラムであるから、それを防ぐために型という概念を導入する。
+
+### 8.2 型付け関係
+
+型付け関係は、(T-TRUE)や(T-SUCC)といった項に型を割り当てる推論規則の集合によって定義される。
+
+#### 定義 8.2.1 型付け関係≡規則のすべてのインスタンスを満たす項と型の最小の二項関係
+
+#### 補題 8.2.2 型付け関係の逆転(逆転補題)
+8.2.2より、部分項から項全体の型を求めることが出来る。
+
+#### 定理 8.2.4 型の一意性
+項の取りうる形すべてに対して逆転補題を用いれば良い。（構造帰納法）
+
+（部分型を持つ場合、型の一意性は保証されない。 ref.15章）
+
