--- a/8.md
+++ b/8.md
@@ -19,3 +19,15 @@
 
 （部分型を持つ場合、型の一意性は保証されない。 ref.15章）
 
+### 8.3 安全性=進行+保存
+
+型システムにおいて重要なのは行き詰まり状態にならないこと、つまり安全性（健全性）である。安全性は以下の二つによって証明される。
+
+- 進行:正しく型付けされた項は行き詰まり状態ではない。
+- 保存:正しく型付けされた項は評価後も正しく型付けされている。
+
+#### 補題 8.3.1 標準形
+正しく型付けされた値が取りうる形のこと。
+
+#### 定理 8.3.2 進行定理
+#### 定理 8.3.3 保存定理
