見出しの修正

--- a/8.md
+++ b/8.md
@@ -1,33 +1,33 @@
 # 第8章
-## 型付き算術式
-### 8.1 型
+# 型付き算術式
+## 8.1 型
 前章の体系では、項を評価すると値になるか行き詰まり状態になるかのどちらかであった。
 
 行き詰まり状態は間違ったプログラムであるから、それを防ぐために型という概念を導入する。
 
-### 8.2 型付け関係
+## 8.2 型付け関係
 
 型付け関係は、(T-TRUE)や(T-SUCC)といった項に型を割り当てる推論規則の集合によって定義される。
 
-#### 定義 8.2.1 型付け関係≡規則のすべてのインスタンスを満たす項と型の最小の二項関係
+### 定義 8.2.1 型付け関係≡規則のすべてのインスタンスを満たす項と型の最小の二項関係
 
-#### 補題 8.2.2 型付け関係の逆転(逆転補題)
+### 補題 8.2.2 型付け関係の逆転(逆転補題)
 8.2.2より、部分項から項全体の型を求めることが出来る。
 
-#### 定理 8.2.4 型の一意性
+### 定理 8.2.4 型の一意性
 項の取りうる形すべてに対して逆転補題を用いれば良い。（構造帰納法）
 
 （部分型を持つ場合、型の一意性は保証されない。 ref.15章）
 
-### 8.3 安全性=進行+保存
+## 8.3 安全性=進行+保存
 
 型システムにおいて重要なのは行き詰まり状態にならないこと、つまり安全性（健全性）である。安全性は以下の二つによって証明される。
 
 - 進行:正しく型付けされた項は行き詰まり状態ではない。
 - 保存:正しく型付けされた項は評価後も正しく型付けされている。
 
-#### 補題 8.3.1 標準形
+### 補題 8.3.1 標準形
 正しく型付けされた値が取りうる形のこと。
 
-#### 定理 8.3.2 進行定理
-#### 定理 8.3.3 保存定理
+### 定理 8.3.2 進行定理
+### 定理 8.3.3 保存定理
