--- a/exercises/9.md
+++ b/exercises/9.md
@@ -29,11 +29,12 @@
 となる。例えば
 
 ```
-f x y = x == y
-```
-とすれば
-
-```
 Γ = f:Bool -> Bool -> Bool, x:Bool, y:Bool
 ```
-とすることが出来る。
+とすると(ここではまだ「==」ないけど)
+
+```
+f x y = x == y
+```
+
+のような関数が定義出来る。
