--- a/exercises/9.md
+++ b/exercises/9.md
@@ -1,4 +1,4 @@
-9.2.3
+## 9.2.3
 
 ```
 Γ |- f x y : Bool
@@ -38,3 +38,21 @@ f x y = x == y
 ```
 
 のような関数が定義出来る。
+
+## 9.3.2
+```
+Γ |- x x : T2
+```
+と仮定すると
+
+```
+Γ |- x x : T2 by T-APP {
+  Γ |- x : T1 -> T2 by T-VAR {
+    x : T1 -> T2 in Γ
+  }
+  Γ |- x : T2 by T-VAR {
+    x : T1 in Γ
+  }
+}
+```
+よってT1 -> T2とT1は等しくならなければならないが、これは矛盾。
